@@ -1,6 +1,6 @@
 if (STATIC_BUILD OR NOT USE_SYSTEM_DCMTK)
   SET(DCMTK_VERSION_NUMBER 360)
-  set(DCMTK_PACKAGE_VERSION "3.6.0")
+  SET(DCMTK_PACKAGE_VERSION "3.6.0")
   SET(DCMTK_SOURCES_DIR ${CMAKE_BINARY_DIR}/dcmtk-3.6.0)
   SET(DCMTK_URL "http://www.montefiore.ulg.ac.be/~jodogne/Orthanc/ThirdPartyDownloads/dcmtk-3.6.0.zip")
   SET(DCMTK_MD5 "219ad631b82031806147e4abbfba4fa4")
